--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/codigo.js"></script>
 </head>
 <body>
     <header >
@@ -21,14 +22,15 @@
             <!--Colocar un cuadro(incompleto) -->
 
         </section>
+        <p><input type="button" name="boton" value="Hacer click" onclick="Probar()"></p>
         <br>
         <br>
         <br>
         <br>
-        
+
     <footer>
         <h2 id="A0">Desarrolado por: Leonardo Guzmán</h2>
     </footer>
-
+    
 </body>
 </html>
