--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="js/codigo.js"></script>
 </head>
 <body>
     <header >
@@ -18,11 +17,10 @@
         <a href="Desarrollo02.html">Desarrollo 02</a>
         <a href="Desarrollo03.html">Desarrollo 03</a>
     </nav>
-        <section>
-            <!--Colocar un cuadro(incompleto) -->
-
+        <section id="A3">
+            <p>...</p>
         </section>
-        <p><input type="button" name="boton" value="Hacer click" onclick="Probar()"></p>
+        <p id="A0" ><input type="button" name="boton" value="Hacer click" onclick="provar()"></p>
         <br>
         <br>
         <br>
@@ -31,6 +29,6 @@
     <footer>
         <h2 id="A0">Desarrolado por: Leonardo Guzmán</h2>
     </footer>
-    
+    <script src="js/codigo.js"></script>
 </body>
 </html>
