--- a/Desarrollo01.html
+++ b/Desarrollo01.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Desarrollo 01</h1>
     <p><a href="index.html">Regresar al principio</a></p>
-    <p><a href="desarrollo02.html">Desarrollo 02</a></p>
-    <p><a href="desarrollo03.html">Desarrollo 03</a></p>
+    <p><a href="Desarrollo02.html">Desarrollo 02</a></p>
+    <p><a href="Desarrollo03.html">Desarrollo 03</a></p>
     <br>
     <p><h4>Para saber en que categoria te encuentras ingresa tu nota final:</h4></p>
     <h4>(Las notas se rigen del 0 al 20)</h4>
