--- a/Desarrollo02.html
+++ b/Desarrollo02.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Desarrollo 02</h1>
     <p><a href="index.html">Regresar al principio</a></p>
-    <p><a href="desarrollo01.html">Desarrollo 01</a></p>
-    <p><a href="desarrollo03.html">Desarrollo 03</a></p>
+    <p><a href="Desarrollo01.html">Desarrollo 01</a></p>
+    <p><a href="Desarrollo03.html">Desarrollo 03</a></p>
 
     <br>
     <form action="" name="curso">
