--- a/Desarrollo03.html
+++ b/Desarrollo03.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Desarrollo 03</h1>
     <p><a href="index.html">Regresar al principio</a></p>
-    <p><a href="desarrollo01.html">Desarrollo 01</a></p>
-    <p><a href="desarrollo02.html">Desarrollo 02</a></p>
+    <p><a href="Desarrollo01.html">Desarrollo 01</a></p>
+    <p><a href="Desarrollo02.html">Desarrollo 02</a></p>
 
     <form action="" name="curso">
         <table border="1" align="center">
