--- a/Desarrollo01.html
+++ b/Desarrollo01.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Desarrollo 01</h1>
-    <p><a href="index.html">Regresar al principio</a></p>
-    <p><a href="Desarrollo02.html">Desarrollo 02</a></p>
-    <p><a href="Desarrollo03.html">Desarrollo 03</a></p>
+    <nav>
+        <a href="index.html">Regresar al principio</a></p>
+        <a href="Desarrollo02.html">Desarrollo 02</a></p>
+        <a href="Desarrollo03.html">Desarrollo 03</a></p>
+    </nav>
+    
     <br>
     <p><h4>Para saber en que categoria te encuentras ingresa tu nota final:</h4></p>
     <h4>(Las notas se rigen del 0 al 20)</h4>
