--- a/Desarrollo02.html
+++ b/Desarrollo02.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Desarrollo 02</h1>
-    <p><a href="index.html">Regresar al principio</a></p>
-    <p><a href="Desarrollo01.html">Desarrollo 01</a></p>
-    <p><a href="Desarrollo03.html">Desarrollo 03</a></p>
-
+    <nav>
+        <a href="index.html">Regresar al principio</a></p>
+        <a href="Desarrollo01.html">Desarrollo 01</a></p>
+        <a href="Desarrollo03.html">Desarrollo 03</a></p>
+    </nav>
     <br>
     <form action="" name="curso">
         <table border="1" align="center">
